modules/lib/dependencies/usrsctp/cobalt_sctp_shim.h

/*
 * Status codes returned by the entry points. COBALT_SCTP_OK is success.
 * COBALT_SCTP_IN_PROGRESS is returned by cobalt_sctp_connect when the
 * non-blocking handshake has started (usrsctp's EINPROGRESS), which the caller
 * treats as success and then awaits the association-change notification. The
 * negatives are shim-level failures (invalid argument, allocation failure, a
 * usrsctp call returning an error). The send entry points instead return the
 * byte count, or a negative value on failure.
 */
#define COBALT_SCTP_OK          0
#define COBALT_SCTP_IN_PROGRESS 1
/*
 * Partial-reliability policy selectors for cobalt_sctp_send_pr. The wrapper maps
 * each to usrsctp's SCTP_PR_SCTP_* policy C-side:
 *
 *   0 = none (fully reliable; prValue ignored)
 *   1 = timed (prValue is the lifetime in milliseconds)
 *   2 = retransmit-limited (prValue is the maximum retransmission count)
 */
#define COBALT_SCTP_PR_NONE 0
#define COBALT_SCTP_PR_TTL  1
#define COBALT_SCTP_PR_RTX  2
/**
 * Initializes the usrsctp stack in no-threads mode with a conn-output callback.
 *
 * Forwards to usrsctp_init_nothreads with the given UDP-encapsulation port (0
 * for the AF_CONN path that routes through the callback) and the conn-output
 * callback, passing a NULL debug printf. Must be called once for the process
 * before any socket is created; the stack is never finished. The callback is the
 * single global function usrsctp invokes for every outbound packet.
 *
 * @param port           the UDP encapsulation port, or 0 for the AF_CONN path.
 * @param connOutputCb   the conn-output upcall stub (see the header preamble for
 *                       its required signature); must not be NULL.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL callback.
 */
int32_t cobalt_sctp_global_init(int32_t port, void *connOutputCb);
/**
 * Registers a conn id so usrsctp routes its outbound packets to the conn-output
 * callback.
 *
 * Forwards to usrsctp_register_address. The conn id is an opaque pointer the
 * caller owns and uses as a routing key; usrsctp never dereferences it.
 *
 * @param connId the conn id pointer.
 * @return COBALT_SCTP_OK.
 */
int32_t cobalt_sctp_register_address(void *connId);
/**
 * Deregisters a conn id previously registered with cobalt_sctp_register_address.
 *
 * Forwards to usrsctp_deregister_address. After this returns usrsctp routes no
 * further outbound packets to the conn id. A NULL conn id is ignored.
 *
 * @param connId the conn id pointer, or NULL.
 * @return COBALT_SCTP_OK.
 */
int32_t cobalt_sctp_deregister_address(void *connId);
/**
 * Advances usrsctp's timer wheel by the given elapsed time.
 *
 * Forwards to usrsctp_handle_timers. Driven periodically by the caller's ticker
 * thread because the stack runs in no-threads mode.
 *
 * @param elapsedMs the elapsed time since the previous tick, in milliseconds.
 * @return COBALT_SCTP_OK.
 */
int32_t cobalt_sctp_handle_timers(int32_t elapsedMs);
/**
 * Creates one AF_CONN SCTP socket bound to a receive callback.
 *
 * The wrapper allocates a context holding the receive callback and its ulp_info,
 * calls usrsctp_socket(AF_CONN, SOCK_STREAM, IPPROTO_SCTP, trampoline, NULL, 0,
 * ctx) where trampoline is the shim's static C receive callback, and returns the
 * context through outSock as an opaque handle. When usrsctp later decodes a
 * message the trampoline reads its sctp_rcvinfo C-side and calls receiveCb with
 * portable scalars; for a notification the isNotification argument is set and the
 * stream id and ppid are unspecified.
 *
 * @param receiveCb the receive upcall stub (see the header preamble for its
 *                  required signature); must not be NULL.
 * @param ulpInfo   an opaque pointer passed back to receiveCb on each firing
 *                  (the caller's conn id); may be NULL.
 * @param outSock   receives the created socket handle on success, or is left
 *                  holding NULL on failure; must not be NULL.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL receiveCb
 *         or outSock, COBALT_SCTP_NOMEM if the context could not be allocated,
 *         COBALT_SCTP_FAIL if usrsctp_socket returned NULL.
 */
int32_t cobalt_sctp_socket_create(void *receiveCb, void *ulpInfo, void **outSock);
/**
 * Binds a socket to a local SCTP port on the AF_CONN address of a conn id.
 *
 * The wrapper builds a sockaddr_conn C-side (AF_CONN family, the port in network
 * byte order, the conn id as the address) and calls usrsctp_bind.
 *
 * @param sock   the socket handle from cobalt_sctp_socket_create.
 * @param port   the local SCTP port in host byte order.
 * @param connId the conn id whose AF_CONN address to bind.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL socket,
 *         COBALT_SCTP_FAIL if usrsctp_bind returned an error.
 */
int32_t cobalt_sctp_bind(void *sock, int32_t port, void *connId);