modules/lib/src/main/java/com/github/auties00/cobalt/calls2/net/transport/sctp/bindings/CobaltSctp.java

// Generated by jextract

package com.github.auties00.cobalt.calls2.net.transport.sctp.bindings;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class CobaltSctp extends CobaltSctp$shared {

    CobaltSctp() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int COBALT_SCTP_OK = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_SCTP_OK 0
     * }
     */
    public static int COBALT_SCTP_OK() {
        return COBALT_SCTP_OK;
    }
    private static final int COBALT_SCTP_IN_PROGRESS = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_SCTP_IN_PROGRESS 1
     * }
     */
    public static int COBALT_SCTP_IN_PROGRESS() {
        return COBALT_SCTP_IN_PROGRESS;
    }
    private static final int COBALT_SCTP_PR_NONE = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_SCTP_PR_NONE 0
     * }
     */
    public static int COBALT_SCTP_PR_NONE() {
        return COBALT_SCTP_PR_NONE;
    }
    private static final int COBALT_SCTP_PR_TTL = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_SCTP_PR_TTL 1
     * }
     */
    public static int COBALT_SCTP_PR_TTL() {
        return COBALT_SCTP_PR_TTL;
    }
    private static final int COBALT_SCTP_PR_RTX = (int)2L;
    /**
     * {@snippet lang=c :
     * #define COBALT_SCTP_PR_RTX 2
     * }
     */
    public static int COBALT_SCTP_PR_RTX() {
        return COBALT_SCTP_PR_RTX;
    }

    private static class cobalt_sctp_global_init {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_global_init");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_global_init(int32_t port, void *connOutputCb)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_global_init$descriptor() {
        return cobalt_sctp_global_init.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_global_init(int32_t port, void *connOutputCb)
     * }
     */
    public static MethodHandle cobalt_sctp_global_init$handle() {
        return cobalt_sctp_global_init.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_global_init(int32_t port, void *connOutputCb)
     * }
     */
    public static MemorySegment cobalt_sctp_global_init$address() {
        return cobalt_sctp_global_init.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_global_init(int32_t port, void *connOutputCb)
     * }
     */
    public static int cobalt_sctp_global_init(int port, MemorySegment connOutputCb) {
        var mh$ = cobalt_sctp_global_init.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_global_init", port, connOutputCb);
            }
            return (int)mh$.invokeExact(port, connOutputCb);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_register_address {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_register_address");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_register_address(void *connId)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_register_address$descriptor() {
        return cobalt_sctp_register_address.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_register_address(void *connId)
     * }
     */
    public static MethodHandle cobalt_sctp_register_address$handle() {
        return cobalt_sctp_register_address.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_register_address(void *connId)
     * }
     */
    public static MemorySegment cobalt_sctp_register_address$address() {
        return cobalt_sctp_register_address.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_register_address(void *connId)
     * }
     */
    public static int cobalt_sctp_register_address(MemorySegment connId) {
        var mh$ = cobalt_sctp_register_address.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_register_address", connId);
            }
            return (int)mh$.invokeExact(connId);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_deregister_address {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_deregister_address");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_deregister_address(void *connId)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_deregister_address$descriptor() {
        return cobalt_sctp_deregister_address.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_deregister_address(void *connId)
     * }
     */
    public static MethodHandle cobalt_sctp_deregister_address$handle() {
        return cobalt_sctp_deregister_address.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_deregister_address(void *connId)
     * }
     */
    public static MemorySegment cobalt_sctp_deregister_address$address() {
        return cobalt_sctp_deregister_address.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_deregister_address(void *connId)
     * }
     */
    public static int cobalt_sctp_deregister_address(MemorySegment connId) {
        var mh$ = cobalt_sctp_deregister_address.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_deregister_address", connId);
            }
            return (int)mh$.invokeExact(connId);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_handle_timers {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_handle_timers");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_handle_timers(int32_t elapsedMs)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_handle_timers$descriptor() {
        return cobalt_sctp_handle_timers.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_handle_timers(int32_t elapsedMs)
     * }
     */
    public static MethodHandle cobalt_sctp_handle_timers$handle() {
        return cobalt_sctp_handle_timers.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_handle_timers(int32_t elapsedMs)
     * }
     */
    public static MemorySegment cobalt_sctp_handle_timers$address() {
        return cobalt_sctp_handle_timers.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_handle_timers(int32_t elapsedMs)
     * }
     */
    public static int cobalt_sctp_handle_timers(int elapsedMs) {
        var mh$ = cobalt_sctp_handle_timers.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_handle_timers", elapsedMs);
            }
            return (int)mh$.invokeExact(elapsedMs);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_socket_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_socket_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_socket_create(void *receiveCb, void *ulpInfo, void **outSock)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_socket_create$descriptor() {
        return cobalt_sctp_socket_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_socket_create(void *receiveCb, void *ulpInfo, void **outSock)
     * }
     */
    public static MethodHandle cobalt_sctp_socket_create$handle() {
        return cobalt_sctp_socket_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_socket_create(void *receiveCb, void *ulpInfo, void **outSock)
     * }
     */
    public static MemorySegment cobalt_sctp_socket_create$address() {
        return cobalt_sctp_socket_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_socket_create(void *receiveCb, void *ulpInfo, void **outSock)
     * }
     */
    public static int cobalt_sctp_socket_create(MemorySegment receiveCb, MemorySegment ulpInfo, MemorySegment outSock) {
        var mh$ = cobalt_sctp_socket_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_socket_create", receiveCb, ulpInfo, outSock);
            }
            return (int)mh$.invokeExact(receiveCb, ulpInfo, outSock);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_bind {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_bind");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
